@@ -12,7 +12,7 @@ public class WindowsPlatform extends Platform {
     }
 
     @Override
-    public String getOsDownloadDescriptor() {
+    public String getOsIdentifier() {
         return "win";
     }
 
