@@ -45,9 +45,9 @@ The following information is from this page: https://wapl.es/rust/2019/02/17/rus
 
     $ git clone https://github.com/tpoechtrager/osxcross
     $ cd osxcross
-    $ wget -nc https://s3.dockerproject.org/darwin/v2/MacOSX10.10.sdk.tar.xz
-    $ mv MacOSX10.10.sdk.tar.xz tarballs/
-    $ UNATTENDED=yes OSX_VERSION_MIN=10.7 ./build.sh
+    $ wget -nc https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX11.3.sdk.tar.xz
+    $ mv MacOSX11.3.sdk.tar.xz.xz tarballs/
+    $ UNATTENDED=yes OSX_VERSION_MIN=11 ./build.sh
 
 ### Build
 
@@ -63,12 +63,21 @@ The executable is then present in this directory:
 
 #### MacOs
 
-    $ export PATH="/home/nw/projects/osxcross/target/bin:$PATH"
+    $ export PATH="${HOME}/projects/osxcross/target/bin:$PATH"
     $ cargo build --release --target x86_64-apple-darwin
 
 The executable is then present in this directory:
 
     intervalmusiccompositor.updater/native-src/target/x86_64-apple-darwin/release/intervalmusiccompositor-updater
+
+#### MacOs Aarch64
+
+    $ export PATH="${HOME}/projects/osxcross/target/bin:$PATH"
+    $ cargo build --release --target aarch64-apple-darwin
+
+The executable is then present in this directory:
+
+    intervalmusiccompositor.updater/native-src/target/aarch64-apple-darwin/release/intervalmusiccompositor-updater
 
 #### Windows
 
