@@ -2,3 +2,7 @@
 [target.x86_64-apple-darwin]
 linker = "x86_64-apple-darwin15-clang"
 ar = "x86_64-apple-darwin15-ar"
+
+[target.aarch64-apple-darwin]
+linker = "aarch64-apple-darwin20.4-clang"
+ar = "aarch64-apple-darwin20.4-ar"
